2004-11-09  Pierre Antilogus  <P.Antilogus@in2p3.fr>

	* add_defs/makedefs.in (STATLIB): statlib.a is now libstat.a

2004-11-08  Yannick Copin  <ycopin@ipnl.in2p3.fr>

	* add_defs/makedefs.in (STATLIB): wrongly commented-out

2004-11-04  Yannick Copin  <yannick@ipnl.in2p3.fr>

	* add_defs/makedefs.in: switch to IFU_C_iolibs-6.1

	* configure.in: switch to IFU_C_iolibs-6.1

2004-11-02  Yannick Copin  <ycopin@ipnl.in2p3.fr>

	* bichip.cxx: new gains for Red channel (there's was a 5.6%
	difference seen on W-exp.)
